Fix spacing and styling on My investment page (#31)

--- a/src/scss/_funds_activity.scss
+++ b/src/scss/_funds_activity.scss
@@ -127,8 +127,8 @@
                 min-width: 80px;
 
                 .funds-dollar-icon {
-                    width: 14px;
-                    height: 14px;
+                    width: 16px;
+                    height: 16px;
                 }
             }
 
@@ -224,8 +224,8 @@
                 }
 
                 .funds-dollar-icon {
-                    width: 14px;
-                    height: 14px;
+                    width: 16px;
+                    height: 16px;
                 }
             }
 
